<resources>
    <string name="app_name">BrainGame</string>
    <string name="_3">3</string>
    <string name="go">Go!</string>
    <string name="textview">TextView</string>
    <string name="_30s">30s</string>
    <string name="_0_0">0/0</string>
    <string name="correct">Correct!</string>
    <string name="play_again">Play Again</string>
    <string name="high_score">High Score</string>
    <string name="three">3</string>
    <string name="three2">3</string>
    <string name="correct2">Correct!</string>
    <string name="play_again2">Play Again</string>
    <string name="high_score2">High Score</string>
</resources>
