<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/startBtnId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/colorAccent"
        android:onClick="startBtnMethod"
        android:padding="40dp"
        android:text="@string/go"
        android:textSize="80sp"
        android:visibility="invisible" />

    <RelativeLayout
        android:id="@+id/gameRelativeLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/timerTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="30dp"
                android:layout_marginRight="30dp"
                android:background="#f79595"
                android:padding="10dp"
                android:text="30s"
                android:textColor="#000"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/sumTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="30dp"
                android:background="#63ea77"
                android:padding="5dp"
                android:text="TextView"
                android:textColor="#000"
                android:textSize="30sp"
                tools:text="31 + 12" />

            <TextView
                android:id="@+id/pointTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#44cced"
                android:padding="10dp"
                android:text="0/0"
                android:textColor="#000"
                android:textSize="30sp" />
        </LinearLayout>


        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="100dp">

            <Button
                android:id="@+id/button0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_rowWeight="1"
                android:layout_column="0"
                android:layout_columnWeight="1"
                android:layout_gravity="fill"
                android:background="#ff444eff"
                android:onClick="chooseAnswer"
                android:tag="0"
                android:text="@string/_3"
                android:textSize="80sp" />

            <Button
                android:id="@+id/button1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_rowWeight="1"
                android:layout_column="1"
                android:layout_columnWeight="1"
                android:layout_gravity="fill"
                android:background="#ff11ff46"
                android:onClick="chooseAnswer"
                android:tag="1"
                android:text="@string/three"
                android:textSize="80sp" />

            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="1"
                android:layout_rowWeight="1"
                android:layout_column="0"
                android:layout_columnWeight="1"
                android:layout_gravity="fill"
                android:background="#ffff09ef"
                android:onClick="chooseAnswer"
                android:tag="2"
                android:text="@string/_3"
                android:textSize="80sp" />

            <Button
                android:id="@+id/button3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="1"
                android:layout_rowWeight="1"
                android:layout_column="1"
                android:layout_columnWeight="1"
                android:layout_gravity="fill"
                android:background="@color/colorAccent"
                android:onClick="chooseAnswer"
                android:tag="3"
                android:text="@string/three2"
                android:textSize="80sp" />

        </GridLayout>

        <TextView
            android:id="@+id/resultTextViewId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="120dp"
            android:background="@android:color/holo_blue_light"
            android:text="@string/correct"
            android:textColor="@android:color/black"
            android:textSize="40sp" />

        <Button
            android:id="@+id/playAgainBtnId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="65dp"
            android:onClick="playAgainBtnMethod"
            android:text="@string/play_again"
            android:textAllCaps="false"
            android:visibility="visible" />

    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>